<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/d172dp"
    android:layout_height="@dimen/d173dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="@dimen/d6dp"
        android:paddingStart="@dimen/d8dp"
        android:paddingEnd="@dimen/d9dp"
        android:text="@string/racing_setting_set_time"
        android:textColor="@color/white"
        android:textSize="@dimen/s10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/flDialogContain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="@dimen/d20dp"
        app:layout_constraintBottom_toTopOf="@id/tvDialogCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle" />

    <TextView
        android:id="@+id/tvDialogCancel"
        android:layout_width="@dimen/d74dp"
        android:layout_height="@dimen/d28dp"
        android:layout_marginStart="@dimen/d8dp"
        android:layout_marginBottom="@dimen/d8dp"
        android:background="@drawable/dialog_btn_cancel_bg"
        android:gravity="center"
        android:text="@string/racing_setting_dialog_cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/s8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDialogOk"
        android:layout_width="@dimen/d74dp"
        android:layout_height="@dimen/d28dp"
        android:layout_marginEnd="@dimen/d8dp"
        android:layout_marginBottom="@dimen/d8dp"
        android:background="@drawable/dialog_btn_ok_bg"
        android:gravity="center"
        android:text="@string/racing_setting_dialog_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/s8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>