<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/racing_rate"
    tools:context=".RacingCompetitionActivity">

    <ImageView
        android:id="@+id/ivCompetitionSetting"
        android:layout_width="@dimen/d70dp"
        android:layout_height="@dimen/d70dp"
        android:layout_marginEnd="@dimen/d16dp"
        android:paddingHorizontal="@dimen/d12dp"
        android:paddingVertical="@dimen/d20dp"
        android:src="@drawable/racing_setting_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCompetitionTrack"
        android:layout_width="@dimen/d126dp"
        android:layout_height="@dimen/d23dp"
        android:background="@drawable/racing_btn_bg_black"
        android:gravity="center"
        android:text="@string/racing_track"
        android:textColor="@color/white"
        android:textSize="@dimen/s16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivCompetitionSetting"
        app:layout_constraintEnd_toStartOf="@id/ivCompetitionSetting"
        app:layout_constraintTop_toTopOf="@id/ivCompetitionSetting" />


    <TextView
        android:id="@+id/tvCompetitionHandBand"
        android:layout_width="@dimen/d126dp"
        android:layout_height="@dimen/d23dp"
        android:layout_marginEnd="@dimen/d12dp"
        android:background="@drawable/racing_btn_bg_black"
        android:gravity="center"
        android:text="@string/racing_headband"
        android:textColor="@color/white"
        android:textSize="@dimen/s16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivCompetitionSetting"
        app:layout_constraintEnd_toStartOf="@id/tvCompetitionTrack"
        app:layout_constraintTop_toTopOf="@id/ivCompetitionSetting" />

    <TextView
        android:id="@+id/tvCompetitionFinish"
        android:layout_width="@dimen/d126dp"
        android:layout_height="@dimen/d23dp"
        android:layout_marginTop="@dimen/d20dp"
        android:layout_marginEnd="@dimen/d28dp"
        android:background="@drawable/racing_btn_bg_black"
        android:gravity="center"
        android:text="@string/racing_competition_finish"
        android:textColor="@color/white"
        android:textSize="@dimen/s16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCompetitionStatus"
        android:layout_width="704dp"
        android:layout_height="@dimen/d316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animated" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivBlueCelebrateAnimation"
        android:layout_width="@dimen/d150dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ivCompetitionStatus"
        app:layout_constraintStart_toStartOf="@id/ivCompetitionStatus"
        app:layout_constraintTop_toTopOf="@id/ivCompetitionStatus"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/racing_celebrate_animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivBlueCelebrateAnimation1"
        android:layout_width="@dimen/d150dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ivBlueCelebrateAnimation"
        app:layout_constraintStart_toEndOf="@id/ivBlueCelebrateAnimation"
        app:layout_constraintTop_toTopOf="@id/ivBlueCelebrateAnimation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/racing_celebrate_animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivRedCelebrateAnimation"
        android:layout_width="@dimen/d150dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ivCompetitionStatus"
        app:layout_constraintEnd_toEndOf="@id/ivCompetitionStatus"
        app:layout_constraintTop_toTopOf="@id/ivCompetitionStatus"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/racing_celebrate_animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivRedCelebrateAnimation1"
        android:layout_width="@dimen/d150dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ivRedCelebrateAnimation"
        app:layout_constraintEnd_toStartOf="@id/ivRedCelebrateAnimation"
        app:layout_constraintTop_toTopOf="@id/ivRedCelebrateAnimation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/racing_celebrate_animation" />

    <TextView
        android:id="@+id/tvBlueAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d117dp"
        android:layout_marginTop="@dimen/d123dp"
        android:text="@string/racing_attention_value"
        android:textColor="@color/white"
        android:textSize="@dimen/s8sp"
        app:layout_constraintStart_toStartOf="@id/ivCompetitionStatus"
        app:layout_constraintTop_toTopOf="@id/ivCompetitionStatus" />

    <TextView
        android:id="@+id/tvBlueAttentionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:textColor="@color/white"
        android:textSize="@dimen/s32sp"
        app:layout_constraintEnd_toEndOf="@id/tvBlueAttention"
        app:layout_constraintStart_toStartOf="@id/tvBlueAttention"
        app:layout_constraintTop_toBottomOf="@id/tvBlueAttention"
        tools:text="80" />

    <TextView
        android:id="@+id/tvRedAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d116dp"
        android:text="@string/racing_attention_value"
        android:textColor="@color/white"
        android:textSize="@dimen/s8sp"
        app:layout_constraintBottom_toBottomOf="@id/tvBlueAttention"
        app:layout_constraintEnd_toEndOf="@id/ivCompetitionStatus"
        app:layout_constraintTop_toTopOf="@id/tvBlueAttention" />

    <TextView
        android:id="@+id/tvRedAttentionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:textColor="@color/white"
        android:textSize="@dimen/s32sp"
        app:layout_constraintEnd_toEndOf="@id/tvRedAttention"
        app:layout_constraintStart_toStartOf="@id/tvRedAttention"
        app:layout_constraintTop_toBottomOf="@id/tvRedAttention"
        tools:text="80" />


    <TextView
        android:id="@+id/tvStartCompetition"
        android:layout_width="@dimen/d160dp"
        android:layout_height="@dimen/d40dp"
        android:layout_marginTop="@dimen/d4dp"
        android:background="@drawable/racing_start_competition_bg"
        android:gravity="center"
        android:text="@string/racing_start_competition"
        android:textColor="@color/white"
        android:textSize="@dimen/s16sp"
        app:layout_constraintEnd_toEndOf="@id/ivCompetitionStatus"
        app:layout_constraintStart_toStartOf="@id/ivCompetitionStatus"
        app:layout_constraintTop_toBottomOf="@id/ivCompetitionStatus" />

    <ProgressBar
        android:id="@+id/pbCompetitionProgress"
        style="@style/racingCompetitionProgress"
        android:layout_width="@dimen/d366dp"
        android:layout_height="@dimen/d23dp"
        android:layout_marginTop="@dimen/d59dp"
        android:mirrorForRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCompetitionStatus"
        tools:progress="50" />

    <TextView
        android:id="@+id/tvRemainingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d16dp"
        android:textColor="#F4F5F9"
        android:textSize="@dimen/s10sp"
        app:layout_constraintBottom_toBottomOf="@id/pbCompetitionProgress"
        app:layout_constraintEnd_toEndOf="@id/pbCompetitionProgress"
        app:layout_constraintTop_toTopOf="@id/pbCompetitionProgress"
        tools:text="剩余时间 00:30" />

    <TextView
        android:id="@+id/tvRacingErrorBlueConnected"
        android:layout_width="@dimen/d127dp"
        android:layout_height="@dimen/d41dp"
        android:layout_marginTop="@dimen/d4dp"
        android:background="@drawable/racing_error_bg"
        android:gravity="center"
        android:text="@string/racing_error_headband_connected"
        android:textColor="@color/white"
        android:textSize="@dimen/s10sp"
        app:layout_constraintEnd_toEndOf="@id/tvBlueAttentionValue"
        app:layout_constraintStart_toStartOf="@id/tvBlueAttentionValue"
        app:layout_constraintTop_toBottomOf="@id/ivCompetitionStatus" />

    <TextView
        android:id="@+id/tvRacingErrorTrackConnected"
        android:layout_width="@dimen/d127dp"
        android:layout_height="@dimen/d41dp"
        android:layout_marginTop="@dimen/d4dp"
        android:background="@drawable/racing_error_bg"
        android:gravity="center"
        android:text="@string/racing_error_track_connected"
        android:textColor="@color/white"
        android:textSize="@dimen/s10sp"
        app:layout_constraintEnd_toEndOf="@id/ivCompetitionStatus"
        app:layout_constraintStart_toStartOf="@id/ivCompetitionStatus"
        app:layout_constraintTop_toBottomOf="@id/ivCompetitionStatus" />


    <TextView
        android:id="@+id/tvRacingErrorRedConnected"
        android:layout_width="@dimen/d127dp"
        android:layout_height="@dimen/d41dp"
        android:layout_marginTop="@dimen/d4dp"
        android:background="@drawable/racing_error_bg"
        android:gravity="center"
        android:text="@string/racing_error_headband_connected"
        android:textColor="@color/white"
        android:textSize="@dimen/s10sp"
        app:layout_constraintEnd_toEndOf="@id/tvRedAttention"
        app:layout_constraintStart_toStartOf="@id/tvRedAttention"
        app:layout_constraintTop_toBottomOf="@id/ivCompetitionStatus" />

    <ImageView
        android:layout_width="@dimen/d72dp"
        android:layout_height="@dimen/d25dp"
        android:layout_marginEnd="@dimen/d28dp"
        android:layout_marginBottom="@dimen/d28dp"
        android:src="@drawable/racing_enter_tech"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>